$Rev$
[2008/01/02]
mWindow.py mHotKey.py
                    Fix custom hotkey error
SvnSettings.py      Fix svn bug

[2007/12/25]
DirBrowser.py       Add F5(Refresh) support.
mPyRun.py           Binding F5 to editor but not MainFrame
CodeSnippet.py mCodeSnippet.py
                    Improve xml reading with threading, and change the tooltip

[2007/12/23]
CodeSnippet.py mCodeSnippet.py
                    Add new snippet
                    
[2007/12/19]
php.acp             add php.acp thanks for 魏振 <etggy@163.com>

[2007/12/18]
canvas_test_plugin  Add Canvas Test plugin, you can directly test DC api

-------------------------------------- 3.9 -----------------------------
[2007/12/12]
common.py           Fix webopen twice open bug
Version.py          change 3.8 to 3.9

-------------------------------------- 3.8.1 -----------------------------
[2007/12/12]
UliPad.py           Remove profile invoke

[2007/12/11]
SvnSupport.py       fix checkout folder spell mistake bug

[2007/12/08]
DirBrowser.py mDirBrowser.py
                    Remember the last add path folder
                    
-------------------------------------- 3.8 -----------------------------
[2007/12/06]
DirBrowser.py       Fix add new directory, when opened if there are children nodes,
                    then will not fire after_expanding event bug
svn_plugin          Migirate svn tool to svn_plugin                    
mRun.py             If the caret is at the last line of the message window, after
                    more lines adding to message window, the caret will goto the 
                    end position, but if the caret is not at the last line, but
                    middle of the lines, after adding lines, the caret will not
                    jump to the end.
                    
[2007/11/28]
mRun.py             Fix message console postion bug, thanks for swordsp
FlatNotebook.py     Update to newest version for mac
SyntaxDialog.py     Fix syntaxdialog bug

[2007/11/26]